--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.2",
+    "less-loader": "^5.0.0"
   }
 }
