--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.0.2",
     "chart.js": "^2.9.3",
+    "dateformat": "^3.0.3",
     "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "masonry-layout": "^4.2.2",
@@ -19,7 +20,8 @@
     "react-dom": "^16.13.1",
     "react-jsx-highcharts": "^4.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "sprintf-js": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
