--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "sass --watch ./src/public/style:./src/public/css/"
+    "scss": "sass --no-source-map --watch ./src/public/scss:./src/public/css/ "
   },
   "eslintConfig": {
     "extends": "react-app"
