--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "antd": "^4.0.2",
     "chart.js": "^2.9.3",
     "dateformat": "^3.0.3",
-    "highcharts": "^8.0.4",
+    "highcharts": "^8.1.1",
     "highcharts-react-official": "^3.0.0",
     "masonry-layout": "^4.2.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-circular-progressbar": "^2.0.3",
     "react-contenteditable": "^3.3.4",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-jsx-highcharts": "^4.0.1",
     "react-masonry-component": "^6.2.1",
+    "react-modal-resizable-draggable": "^0.1.4",
+    "react-native": "^0.62.2",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "sprintf-js": "^1.1.2"
+    "redux": "^4.0.5",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.3.0",
+    "sprintf-js": "^1.1.2",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
