--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-react-session": "^2.6.1",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sprintf-js": "^1.1.2",
     "styled-components": "^5.1.1"
