--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.0.2",
     "chart.js": "^2.9.3",
     "dateformat": "^3.0.3",
+    "dayjs": "^1.8.30",
     "emotion": "^10.0.27",
     "highcharts": "^8.1.1",
     "highcharts-react-official": "^3.0.0",
