--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://wmrsmile2018.github.io/gg-frond-end",
   "name": "gg-frond-end",
   "version": "0.1.0",
   "private": true,
@@ -48,7 +49,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "scss": "sass --no-source-map --watch ./src/public/scss:./src/public/css/ "
+    "scss": "sass --no-source-map --watch ./src/public/scss:./src/public/css/ ",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
